Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -10,8 +10,10 @@ pool:
   vmImage: 'ubuntu-latest'
 
 steps:
+
 - script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  displayName: 'Run a one-line script' 
+
 
 - script: |
     echo Add other tasks to build, test, and deploy your project.
@@ -21,3 +23,5 @@ steps:
   inputs:
     Value: 'aaa'
     Key: 'key'
+
+- bash: echo $(Value)  
