Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -24,4 +24,10 @@ steps:
     Value: 'aaa'
     Key: 'key'
 
-- bash: echo $(Value)  
+
+- task: CmdLine@2
+  inputs:
+    script: |
+      echo Write your commands here
+      
+      echo Hello $(Value)
