Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -19,15 +19,15 @@ steps:
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'
+
 - task: migoooo@0
   inputs:
-    Value: 'aaa'
+    Value: '$(platform)'
     Key: 'key'
-
 
 - task: CmdLine@2
   inputs:
     script: |
       echo Write your commands here
       
-      echo Hello $(Value)
+      echo Hello $(platform)
