Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -24,9 +24,5 @@ steps:
   inputs:
     solution: '**/*.sln'
     platform: '$(platform)'
-- task: CmdLine@2
-  inputs:
-    script: |
-      echo Write your commands here
-      
-      echo Hello $(platform)
+
+- bash: echo $(platform)
