--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -18,11 +18,12 @@ steps:
 - script: |
     echo Add other tasks to build, test, and deploy your project.
     echo See https://aka.ms/yaml
-  displayName: 'Run a multi-line script' 
+  displayName: 'Run a multi-line script'  
 
-- task: migoooo@0
+- task: VariableSetTask@1
   inputs:
     VariableName: 'aaa'
-    Value: 'Value'
-
+    Value: 'aaa'
+    IsSecret: false
+    
 - script: echo Hello, $(aaa)!
