Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -25,3 +25,8 @@ steps:
     VariableName: 'aaa'
     Value: 'world'
 - script: echo Hello, $(aaa)!
+
+- task: build-task@0
+  inputs:
+    FabrikamService: 'FabrikamTest'
+    project: '213'
