--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -20,13 +20,16 @@ steps:
     echo See https://aka.ms/yaml
   displayName: 'Run a multi-line script'  
 
-- task: migoooo@0
-  inputs:
-    VariableName: 'aaa'
-    Value: 'world'
-- script: echo Hello, $(aaa)!   
 
 - task: build-task@0
   inputs:
     FabrikamService: 'FabrikamTest'
     project: '11111'
+
+
+- task: migoooo@0
+  inputs:
+    VariableName: 'aaaa'
+    Value: 'world'
+
+- script: echo Hello, $(aaaa)!
